tests/miz/fail/parser/fail_parser_export_missing_path_001.miz
export 123;
theorem T: thesis;
